--- a/challenge2.css
+++ b/challenge2.css
@@ -1,157 +1,231 @@
-h1{
-	background-color: pink;
-}
+*{
+	margin: 0px;
+	padding: 0px;
+	}
 
+.grid-container{
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows:1fr;
+	}
+
+.content-box1{
+	display: flex;
+	flex-flow: row;
+	width: 100%;
+	height:50px;
+	margin-top: 15px;
+	}
+
+.zon, .maan{
+	width:50px;
+	height:50px;
+	}
+
+.maan{
+	margin-left: 10px;
+	}
+/*position relative om de zon en de maan met tweenmax te kunnen animeren.*/
+.maanfoto{
+	position: relative;
+	width:100%;
+	height:100%;
+	}
+
+.zonfoto{
+	position: relative;
+	width:100%;
+	height:100%;
+	left: 240px;
+	}
+
+body{
+	background-image: url("img/background.png");
+	background-size:cover;
+	min-height: 700px;
+	}
+
+header{
+	display: flex;
+	flex-flow: row;
+	width:100%;
+	height:52px;
+	background-color: #310714;
+	}
+
+.titel{
+	color: white; 
+	min-width:80px;
+	max-height:52px;
+	text-align: center;
+	margin-top: 8px; 
+	}
+
+.grid-item-box3{
+	width: 100%;
+	height: 500px;
+	}
+
+.content-box2{
+	width:200px;
+	margin: auto;
+	margin-top: 50px;
+	}
+
+/*Groote van de klok kan met deze code gewijzigd worden.*/
 :root{
-  --size: 200px;
-}
+  	--size: 200px;
+	}	
 
 #klok{
-  width: var(--size);
-  height: var(--size);
-  background-color: #ccc;
-  border: 3px solid #000;
-  border-radius: 50%;
-  box-shadow: 0 0 10px 0 black;
-  position: relative;
-}
+	 width: var(--size);
+	 height: var(--size);
+	 background-color: #310714;
+	 border-radius: 50%;
+	 box-shadow: 0 0 10px 0 black;
+	 position: relative;
+	}
 
+/*De lopende wijzer*/
 #sec-hand{
-  width: 1px;
-  height: 50%;
-  background-color: black;
-  transform-origin: 50% 80%;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-}
+  	width: 1px;
+  	height: 50%;
+  	background-color: #C4C4C4;
+  	transform-origin: 50% 80%;
+  	position: absolute;
+  	top: 10%;
+  	left: 50%;
+	}
 
+/*De kleine wijzer*/
 #min-hand{
-  width: 3px;
-  height: 40%;
-  background-color: blue;
-  transform-origin: 50% 80%;
-  position: absolute;
-  top: 18%;
-  left: calc(50% - 1px);
-}
+  	width: 7px;
+  	height: 40%;
+  	background-color: #C4C4C4;
+  	transform-origin: 50% 80%;
+  	position: absolute;
+  	top: 18%;
+  	left: calc(50% - 1px);
+	}
 
+/*De grote wijzer*/
 #hr-hand {
-  width: 5px;
-  height: 25%;
-  background-color: red;
-  transform-origin: 50% 80%;
-  position: absolute;
-  top: 30%;
-  left: calc(50% + -2px);
-}
-
+  	width: 7px;
+  	height: 25%;
+  	background-color: #C4C4C4;
+  	transform-origin: 50% 80%;
+  	position: absolute;
+  	top: 30%;
+  	left: calc(50% + -2px);
+	}
+	
+/*De cijfers binnen de klok moeten ieder op de juiste plek komen, dat kan door middel van transform: rotate.*/
 .num{
-  height: 100%;
-  position: absolute;
-  left: calc(50% - 0.5em);
-}
+  	height: 100%;
+  	position: absolute;
+  	left: calc(50% - 0.5em);
+	}
 
 .num div {
-  width: 1em;
-  line-height: 2em;
-  color: brown;
-  text-align: center;
-  vertical-align: middle;
-}
+ 	width: 1em;
+  	line-height: 2em;
+  	color: white;
+  	text-align: center;
+  	vertical-align: middle;
+	}
 
 .num1 {
-  transform: rotate(30deg);
-}
+  	transform: rotate(30deg);
+	}
 
 .num1 div{
-  transform: rotate(-30deg);
-}
+  	transform: rotate(-30deg);
+	}
 
 .num2 {
-  transform: rotate(60deg);
-}
+  	transform: rotate(60deg);
+	}
 
 .num2 div{
-  transform: rotate(-60deg);
-}
+  	transform: rotate(-60deg);
+	}
 
 .num3 {
-  transform: rotate(90deg);
-}
+  	transform: rotate(90deg);
+	}
 
 .num3 div{
-  transform: rotate(-90deg);
-}
+  	transform: rotate(-90deg);
+	}
 
 .num4 {
-  transform: rotate(120deg);
-}
+  	transform: rotate(120deg);
+	}
 
 .num4 div{
-  transform: rotate(-120deg);
-}
+ 	transform: rotate(-120deg);
+	}
 
 .num5 {
-  transform: rotate(150deg);
-}
+  	transform: rotate(150deg);
+	}
 
 .num5 div{
-  transform: rotate(-150deg);
-}
+  	transform: rotate(-150deg);
+	}
 
 .num6 {
-  transform: rotate(180deg);
-}
+  	transform: rotate(180deg);
+	}
 
 .num6 div{
-  transform: rotate(-180deg);
-}
+  	transform: rotate(-180deg);
+	}
 
 .num7 {
-  transform: rotate(210deg);
-}
+  	transform: rotate(210deg);
+	}
 
 .num7 div{
-  transform: rotate(-210deg);
-}
+  	transform: rotate(-210deg);
+	}
 
 .num8 {
-  transform: rotate(240deg);
-}
+  	transform: rotate(240deg);
+	}
 
 .num8 div{
-  transform: rotate(-240deg);
-}
+  	transform: rotate(-240deg);
+	}
 
 .num9 {
-  transform: rotate(270deg);
-}
+  	transform: rotate(270deg);
+	}
 
 .num9 div{
-  transform: rotate(-270deg);
-}
+  	transform: rotate(-270deg);
+	}
 
 .num10 {
-  transform: rotate(300deg);
-}
+  	transform: rotate(300deg);
+	}
 
 .num10 div{
-  transform: rotate(-300deg);
-}
+  	transform: rotate(-300deg);
+	}
 
 .num11 {
-  transform: rotate(330deg);
-}
+  	transform: rotate(330deg);
+	}
 
 .num11 div{
-  transform: rotate(-330deg);
-}
+  	transform: rotate(-330deg);
+	}
 
 .num12 {
-  transform: rotate(0deg);
-}
+  	transform: rotate(0deg);
+	}
 
 .num12 div{
-  transform: rotate(-0deg);
-}
+  	transform: rotate(-0deg);
+	}
