--- a/challenge2.css
+++ b/challenge2.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani');
 *{
 	margin: 0px;
 	padding: 0px;
+	font-family: "Rajdhani", sans-serif;
 	}
 
 .grid-container{
@@ -26,13 +28,13 @@
 	margin-left: 10px;
 	}
 /*position relative om de zon en de maan met tweenmax te kunnen animeren.*/
-.maanfoto{
+#img{
 	position: relative;
 	width:100%;
 	height:100%;
 	}
 
-.zonfoto{
+#img2{
 	position: relative;
 	width:100%;
 	height:100%;
@@ -69,8 +71,25 @@ header{
 .content-box2{
 	width:200px;
 	margin: auto;
-	margin-top: 50px;
+	margin-top: 25px;
 	}
+
+#datum, #message{
+	text-align: center;
+	}
+
+#message{
+	background-color: rgba(186, 186, 186, 48%);
+	border-radius: 10px;
+	box-shadow: 5px 10px 8px #888888;
+	margin-bottom: 15px;
+}
+
+
+#message:hover {
+  opacity: 0.5;
+  filter: alpha(opacity=100); /* For IE8 and earlier */
+}
 
 /*Groote van de klok kan met deze code gewijzigd worden.*/
 :root{
@@ -118,7 +137,7 @@ header{
   	top: 30%;
   	left: calc(50% + -2px);
 	}
-	
+
 /*De cijfers binnen de klok moeten ieder op de juiste plek komen, dat kan door middel van transform: rotate.*/
 .num{
   	height: 100%;
@@ -229,3 +248,65 @@ header{
 .num12 div{
   	transform: rotate(-0deg);
 	}
+
+/* Hier komt de code voor Tablet resolutie */
+
+@media only screen and (min-width: 361px){
+	
+	body{
+		background-image: url("img/background_tablet.png");
+	}
+
+	#zonfoto{
+		left: 620px;
+	}
+
+	.maan{
+		margin-left: 15px;
+	}
+
+	.content-box2{
+		margin-top: 15px;
+	}
+}
+
+
+/* Hier komt de code voor desktop klein resolutie */
+
+@media only screen and (min-width: 766px){
+		
+	body{
+		background-image: url("img/background_desktop.png");
+	}
+	
+	#zonfoto{
+		left: 1220px;
+	}
+
+	.maan{
+		margin-left: 20px;
+	}
+
+	:root{
+  	--size: 220px;
+	}
+
+	.content-box2{
+		margin-top: -35px;
+	}
+}
+
+/*Hier komt de code voor desktop groot resolutie */
+@media only screen and (min-width: 1367px){
+	body{
+		background-image: url("img/background_desktopgroot.png");
+	}
+
+	#zonfoto{
+		left: 1720px;
+	}
+
+	.maan{
+		margin-left: 40px;
+	}
+}
