--- a/challenge2.css
+++ b/challenge2.css
@@ -257,7 +257,7 @@ header{
 		background-image: url("img/background_tablet.png");
 	}
 
-	#zonfoto{
+	#img2{
 		left: 620px;
 	}
 
@@ -279,7 +279,7 @@ header{
 		background-image: url("img/background_desktop.png");
 	}
 	
-	#zonfoto{
+	#img2{
 		left: 1220px;
 	}
 
@@ -302,7 +302,7 @@ header{
 		background-image: url("img/background_desktopgroot.png");
 	}
 
-	#zonfoto{
+	#img2{
 		left: 1720px;
 	}
 
